Feat: java record serialization/deserialization (#1842)